Sun Nov  9 15:20:03 CET 2008
- release MirrorBrain 2.1
  - simplified the Apache configuration: It is no longer needed to configure a
    database query. At the same time it's less error-prone and avoids trouble
    if one forgets to update the query, when the database schema changes. 

Mon Nov  3 11:04:04 CET 2008
- release MirrorBrain 2.0
  - implement better fallback mirror selection
  - add tool to list/add/rm files in the mirror database

Sun Oct 26 18:07:52 CET 2008
- mod_zrkadlo 1.9:
  - add bittorrent links (to found .torrent files) into metalinks
  - embed PGP signatures (.asc files) into metalinks
  - add configurable CSS stylesheet to mirror lists

Fri Sep 19 21:08:42 CET 2008
 - implement the redirection exceptions (file too small, mime type not allowed
   to be redirected etc) for transparently negotiated metalinks.
 - add Vary header on all transparently negotiated resources.
- new, better implementation of rsyncusers tool
- improved mirrordoctor tool
- bugfixes in the scanner, mainly for scanning via HTML
- installation instructions updated

Fri Aug 22 17:22:14 CEST 2008
- allow to use the apache module and all tools with multiple instances of
  the mirrorbrain. Now, one machine / one Apache can host multiple separate
  instances, each in a vhost.
- a number of small bugs in the tools were fixed and several improvements
  added.

Wed Jun 11 01:20:12 CEST 2008
- added "mirrordoctor", a commandline tool to maintain mirror entries in the
  database. Finally!

Mon Jun  2 17:30:45 CEST 2008
- mod_zrkadlo 1.8:
  use mod_memcache for the configuration and initialization of memcache
- metalink-hasher script added, to prepare hashes for injection into metalink files
- rsyncusers analysis tool added
- scanner bugfix regarding following redirects for large file checks

Fri May  2 18:54:09 CEST 2008
- failover testbed for text mirrorlists implemented
- rsyncinfo tool added

Wed Apr 30 19:34:31 CEST 2008
- metalinks: switch back to RFC822 format