@@ -63,6 +63,7 @@ CREATE TABLE `server` (
   `country_only` tinyint(1) default '0',
   `region_only` tinyint(1) default '0',
   `other_countries` text NOT NULL,
+  `file_maxsize` int(11) NOT NULL default '0',
   PRIMARY KEY  (`id`),
   UNIQUE KEY `identifier` (`identifier`),
   KEY `server_enabled_status_baseurl_score_idx` (`enabled`,`status_baseurl`,`score`)
