@@ -3,6 +3,7 @@ Sun Nov  9 15:20:03 CET 2008
   - simplified the Apache configuration: It is no longer needed to configure a
     database query. At the same time it's less error-prone and avoids trouble
     if one forgets to update the query, when the database schema changes. 
+  - specific mirrors can be now configured to get only requests for files < n bytes
 
 Mon Nov  3 11:04:04 CET 2008
 - release MirrorBrain 2.0
